--- a/Nestjs-tutorial2/docker-compose.yml
+++ b/Nestjs-tutorial2/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
     - "5432:5432"
     volumes:
-    - /data/postgres:/data/postgres
+    - /data/postgres:/var/lib/postgresql/data
     env_file:
     - docker.env
     networks:
     - postgres
- 
+
   pgadmin:
     links:
     - postgres:postgres
@@ -19,8 +19,9 @@ services:
     image: dpage/pgadmin4
     ports:
     - "8080:80"
+    user: root
     volumes:
-    - /data/pgadmin:/root/.pgadmin
+    - /data/pgadmin:/var/lib/pgadmin
     env_file:
     - docker.env
     networks:
