--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -31,6 +31,8 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
