--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.9.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.1.1",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/elasticsearch": "^8.1.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.1.1",
