--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
+    "cache-manager": "^3.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -50,6 +51,7 @@
     "@nestjs/testing": "^8.1.1",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^3.4.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
