--- a/Nestjs-tutorial2/docker-compose.yml
+++ b/Nestjs-tutorial2/docker-compose.yml
@@ -1,32 +1,43 @@
-version: "3"
+version: '3'
 services:
+  redis:
+    image: 'redis:alpine'
+    ports:
+      - '6379:6379'
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - '8081:8081'
+    depends_on:
+      - redis
   postgres:
     container_name: postgres
     image: postgres:latest
     ports:
-    - "5432:5432"
+      - '5432:5432'
     volumes:
-    - /data/postgres:/var/lib/postgresql/data
+      - /data/postgres:/var/lib/postgresql/data
     env_file:
-    - docker.env
+      - docker.env
     networks:
-    - postgres
+      - postgres
 
   pgadmin:
     links:
-    - postgres:postgres
+      - postgres:postgres
     container_name: pgadmin
     image: dpage/pgadmin4
     ports:
-    - "8080:80"
+      - '8080:80'
     user: root
     volumes:
-    - /data/pgadmin:/var/lib/pgadmin
+      - /data/pgadmin:/var/lib/pgadmin
     env_file:
-    - docker.env
+      - docker.env
     networks:
-    - postgres
-
+      - postgres
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
@@ -37,7 +48,7 @@ services:
       - discovery.seed_hosts=es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
     ulimits:
       memlock:
         soft: -1
@@ -57,7 +68,7 @@ services:
       - discovery.seed_hosts=es01,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
     ulimits:
       memlock:
         soft: -1
@@ -75,7 +86,7 @@ services:
       - discovery.seed_hosts=es01,es02
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
     ulimits:
       memlock:
         soft: -1
@@ -84,7 +95,7 @@ services:
       - data03:/usr/share/elasticsearch/data
     networks:
       - elastic
- 
+
 volumes:
   data01:
     driver: local
@@ -92,7 +103,7 @@ volumes:
     driver: local
   data03:
     driver: local
- 
+
 networks:
   postgres:
     driver: bridge
