--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -33,6 +33,7 @@
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
     "cache-manager": "^3.6.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -52,6 +53,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^3.4.3",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
