--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/schedule": "^1.1.0",
     "@nestjs/typeorm": "^8.0.3",
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
@@ -37,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -55,11 +57,13 @@
     "@types/cache-manager": "^3.4.3",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
     "@types/jest": "^27.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
