--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -29,14 +29,20 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.4",
+    "@types/component-emitter": "^1.2.11",
+    "@types/cookie": "^0.5.1",
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
     "cache-manager": "^3.6.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "component-emitter": "^1.3.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
@@ -66,6 +72,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
