--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -45,10 +45,12 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "nodemailer": "^6.7.3",
+    "otplib": "^12.0.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -72,6 +74,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/qrcode": "^1.4.2",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
