--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
     "@hapi/joi": "^17.1.1",
+    "@nestjs/bull": "^0.5.4",
     "@nestjs/common": "^8.1.1",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.1.1",
@@ -35,8 +36,10 @@
     "@nestjs/websockets": "^8.4.4",
     "@types/component-emitter": "^1.2.11",
     "@types/cookie": "^0.5.1",
+    "adm-zip": "^0.5.9",
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
+    "bull": "^4.8.2",
     "cache-manager": "^3.6.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -44,6 +47,8 @@
     "component-emitter": "^1.3.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "imagemin": "^8.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "nodemailer": "^6.7.3",
     "otplib": "^12.0.1",
     "passport": "^0.5.2",
@@ -60,14 +65,17 @@
   "devDependencies": {
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
+    "@types/adm-zip": "^0.5.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.8",
     "@types/cache-manager": "^3.4.3",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
+    "@types/imagemin": "^8.0.0",
     "@types/jest": "^27.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.1",
