--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -59,6 +59,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "stripe": "^8.219.0",
     "typeorm": "^0.3.4",
     "uuid": "^8.3.2"
   },
