--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -60,6 +60,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "stripe": "^8.219.0",
+    "twilio": "^3.77.0",
     "typeorm": "^0.3.4",
     "uuid": "^8.3.2"
   },
