--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -47,6 +47,7 @@
     "component-emitter": "^1.3.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "googleapis": "^100.0.0",
     "imagemin": "^8.0.1",
     "imagemin-pngquant": "^9.0.2",
     "nodemailer": "^6.7.3",
