--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -38,6 +38,7 @@
     "@nestjs/websockets": "^8.4.4",
     "@types/component-emitter": "^1.2.11",
     "@types/cookie": "^0.5.1",
+    "@types/etag": "^1.8.1",
     "adm-zip": "^0.5.9",
     "aws-sdk": "^2.1109.0",
     "bcrypt": "^5.0.0",
@@ -49,6 +50,7 @@
     "component-emitter": "^1.3.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "etag": "^1.8.1",
     "googleapis": "^100.0.0",
     "imagemin": "^8.0.1",
     "imagemin-pngquant": "^9.0.2",
