--- a/Nestjs-tutorial2/package.json
+++ b/Nestjs-tutorial2/package.json
@@ -51,6 +51,7 @@
     "component-emitter": "^1.3.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "eslint-plugin-import": "^2.26.0",
     "etag": "^1.8.1",
     "googleapis": "^100.0.0",
     "imagemin": "^8.0.1",
