--- a/nest-js-exercise/package.json
+++ b/nest-js-exercise/package.json
@@ -26,12 +26,17 @@
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjsx/crud": "^5.0.0-alpha.3",
+    "@nestjsx/crud": "^4.6.2",
+    "@nestjsx/crud-typeorm": "^4.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
